# structure-identifier

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: input.txt
include/structure_identifier/: identifier.hpp  testers.hpp
src/: main.cpp
